--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -1,2 +1,4 @@
 <h1>About Dracula</h1>
 <p>Count Dracula is the title character and primary antagonist of Bram Stoker's 1897 Gothic horror novel Dracula. He is considered thus to be both the prototypical and the archetypical vampire in subsequent works of fiction. Some aspects of the character are believed to have been inspired by the 15th-century Romanian general and Wallachian Prince Vlad III the Impaler, who was also known as Dracula. Other character aspects have been added or altered in subsequent popular media fictional works. The character has subsequently appeared frequently in popular culture, from films to animated media to breakfast cereals.</p>
+
+<button class="btn btn-primary" {{action 'showRealName'}}>Click here to learn Dracula's real name</button>
