--- a/templates/contact.hbs
+++ b/templates/contact.hbs
@@ -6,7 +6,14 @@
       <li>{{#link-to 'phone'}}Phone{{/link-to}}</li>
       <li>{{#link-to 'email'}}Email{{/link-to}}</li>
     </ul>
-    <p>Or, <a href='#' {{action 'sendMessage'}}>click here</a> to send a secret message.</p>
+    {{#if messageSent}}
+      <p>
+        Thank you. Your message has been sent.
+        Your confirmation number is {{confirmationNumber}}.
+      </p>
+    {{else}}
+      <p>Or, <a href='#' {{action 'sendMessage'}}>click here</a> to send a secret message.</p>
+    {{/if}}
   </div>
   <div class="col-md-6">
     {{outlet}}
