--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -1,7 +1,7 @@
 <h1>Dracula's blog</h1>
 
 <ul>
-  <li><a href="#">I love blood!</a></li>
-  <li><a href="#">The Count</a></li>
-  <li><a href="#">Thievery</a></li>
+  {{#each}}
+  <li>{{#link-to 'post' this.id}}{{title}}{{/link-to}}</li>
+  {{/each}}
 </ul>
