--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -1,3 +1,19 @@
 <h1>{{title}}</h1>
+{{#if isEditing}}
+  <form>
+    <div class="form-group">
+      <label for="title">Title</label>
+      {{input value=title id="title" class="form-control"}}
+    </div>
 
-<p>{{body}}</p>
+    <div class="form-group">
+      <label for="body">Body</label>
+      {{textarea value=body id="body" class="form-control" rows="15"}}
+    </div>
+
+    <button class="btn btn-primary" {{action 'save'}}>Save</button>
+  </form>
+{{else}}
+  <p>{{body}}</p>
+  <button class="btn btn-primary" {{action 'edit'}}>Edit</button>
+{{/if}}
