--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -5,3 +5,5 @@
   <li>{{#link-to 'post' this.id}}{{title}}{{/link-to}}</li>
   {{/each}}
 </ul>
+
+<p><a href='#' {{action 'sortByTitle'}}>Sort by title</a></p>
