switch to local storage and delete posts

--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -6,4 +6,6 @@
   {{/each}}
 </ul>
 
+{{#link-to 'new-post' className="btn btn-primary"}}New scary post{{/link-to}}
+
 <p><a href='#' {{action 'sortByTitle'}}>Sort by title</a></p>
