--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -16,4 +16,6 @@
 {{else}}
   <p>{{body}}</p>
   <button class="btn btn-primary" {{action 'edit'}}>Edit</button>
+  <button class="btn btn-danger" {{action 'delete'}}>Delete</button>
 {{/if}}
+
