--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -19,3 +19,13 @@
   <button class="btn btn-danger" {{action 'delete'}}>Delete</button>
 {{/if}}
 
+<h2>Comments</h2>
+
+{{#each comments}}
+  <p>
+    {{text}}
+  </p>
+{{/each}}
+
+<p>{{#link-to 'new-comment' this class="btn btn-default"}}New comment{{/link-to}}</p>
+{{outlet}}
